[package]
name = "dagcuter"
version = "0.1.3"
edition = "2024"
description = "dagcuter is a Rust library for executing directed acyclic graphs (DAGs) of tasks. It manages task dependencies, detects cyclic dependencies, and supports customizable task lifecycles (pre-execution, post-execution). It also supports concurrent execution of independent tasks to improve performance."
license = "Apache-2.0"
repository = "https://github.com/xmapst/RustDagcuter"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio-util = "0.7.15"
futures = "0.3.31"
